--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -746,17 +746,7 @@
   </div>
 </footer><!-- End Footer -->
 
-<a href="#" class="back-to-top"><i class="icofont-simple-up"></i></a>
-
-
-
-
-
-
-
-
-
-
+<!-- <a href="#" class="back-to-top"><i class="icofont-simple-up"></i></a> -->
 
 
 
