--- a/src/app/menu/menu.component.css
+++ b/src/app/menu/menu.component.css
@@ -8,6 +8,8 @@
 /*--------------------------------------------------------------
 # General
 --------------------------------------------------------------*/
+
+
 body {
   font-family: "Open Sans", sans-serif;
   color: #4d4643;
@@ -324,8 +326,8 @@ h1, h2, h3, h4, h5, h6 {
 # Header Social Links
 --------------------------------------------------------------*/
 .header-social-links {
-  padding-left: 14px;
-  margin-left: 125px;
+  /* padding-left: 14px; */
+  margin-left: 26px;
   /*border-left: 1px solid #c4c4c4;*/
 }
 
@@ -343,7 +345,7 @@ h1, h2, h3, h4, h5, h6 {
 
 @media (max-width: 768px) {
   .header-social-links {
-    padding: 0 48px 0 0;
+    /* padding: 0 48px 0 0; */
     border-left: 0;
   }
 }
@@ -1035,32 +1037,19 @@ width:100%;
 height:100%;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-[data-toggle="collapse"].collapsed .fa:before {
-content: "\f13a";
+p {
+  font-family: Lato;
 }
 
-
-[data-toggle="collapse"] .fa:before {  
-content: "\f139";
+button {
+  position: fixed;
+  bottom: 5px;
+  right: 5px;
+  font-size: 20px;
+  text-align: center;
+  border-radius: 5px;
+  outline: none;
 }
-
-[data-toggle="collapse"].collapsed .fa:before {
-content: "\f13a";
-}
-
 
 
 
