--- a/src/app/registration/registration.component.html
+++ b/src/app/registration/registration.component.html
@@ -1,3 +1,271 @@
-<p>
-  registration works!
-</p>
+<app-menu></app-menu>
+
+
+
+
+<!-- image -->
+<div class="img-wrapper">
+  <img class="img-responsive"
+    src="https://irp-cdn.multiscreensite.com/df1b0f02/dms3rep/multi/mobile/93691521_2857796014257094_5746070594508554240_o-fbc7e27e.jpg">
+  <div class="img-overlay">
+    <h2 class="headingName">Registration</h2>
+    <button class="btn btn-md firstbutton">Member Login</button>
+    <br> <button class="btn btn-md secondbutton">Not a Member?Join Now! </button>
+  </div>
+</div>
+<!-- image end-->
+<br>
+<div class="row">
+  <div class="col-md-2"></div>
+  <div class="col-md-8">
+    <h4 class="membershipopti">Membership Options</h4>
+    <br>
+    <p class="memberscroll">Over 200,000 animals in our DNA Registry </p>
+  </div>
+  <div class="col-md-2"></div>
+</div>
+<br>
+<!-- PREMIUM MEMBERSHIP -->
+<section>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-2 "></div>
+      <div class="col-md-10 ">
+        <h4 style="font-family: auto;text-align: center;margin-right: 55px;">PREMIUM MEMBERSHIP</h4>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-md-1"></div>
+      <div class="col-md-4">
+        <img class="card-img-bottom"
+          src="https://lirp-cdn.multiscreensite.com/df1b0f02/dms3rep/multi/opt/123255223_3410848085618548_5497873751983602838_o-640w.jpg"
+          alt="" title="" style="height: 313px;">
+      </div>
+
+      <div class="col-md-5">
+        <div>
+          <div class="card-block">
+            <h6 class="header">1.Register animals with the ABBI.</h6>
+            <ol class="d">
+              <li>Receive pedigrees with three generations listed</li>
+              <li>ABBI is the leading bucking cattle DNA registry in the world</li>
+              <li>ABBI is the third-largest cattle registry in the world</li>
+              <li>ABBI has some of the oldest and most legendary bloodlines in the bucking bull industry</li>
+            </ol>
+
+
+            <h6 class="header">2.Compete in ABBI events.</h6>
+            <ol class="d">
+              <li>ABBI paid out over $2 million in 2015</li>
+              <li>More than $1 million will be paid out in prize money to ABBI bulls at the 2015 Las Vegas ABBI Finals
+                alone.</li>
+            </ol>
+            <h6 class="header">3.Learn about ABBI sanctioned Sales and industry information only available to members.
+            </h6>
+            <h6 class="header">4.Registry access. This allows you to search for any animal or bredding program in the
+              database and see the complete records.</h6>
+            <!-- <a href="#" class="btn btn-primary">Read More</a> -->
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</section>
+<!-- PREMIUM MEMBERSHIP end -->
+<hr>
+
+
+<!-- LIFETIME MEMBERSHIP -->
+<section>
+  <div class="container">
+
+
+    <div class="row">
+      <div class="col-md-1"></div>
+      <div class="col-md-4">
+        <img class="card-img-bottom"
+          src=" https://lirp-cdn.multiscreensite.com/df1b0f02/dms3rep/multi/opt/106726007_3059170017453025_6398360367647763079_o-9a4253f3-640w.jpg"
+          alt="" title="" style="height: 313px;">
+      </div>
+
+      <div class="col-md-5">
+        <div>
+          <h4 style="font-family: auto;">LIFETIME MEMBERSHIP</h4>
+          <div class="card-block">
+            <ol class="lifetime">
+              <li>All of Standard and Premium Membership Benefits</li>
+              <li>Only pay membership dues once</li>
+              <li>Additional DNA Research at no additional cost</li>
+              <li>One (1) inventory clean-up at no additional cost</li>
+              <li>Free shipping on EID tag purchases (must ask for discount at time of purchase)</li>
+
+            </ol>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</section>
+<!-- LIFETIME MEMBERSHIP end -->
+<hr>
+<!-- ABHR MEMBNERSHIP -->
+<section>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-7 ">
+        <h4 style="font-family: auto;text-align: center;">ABHR MEMBNERSHIP</h4>
+      </div>
+      <div class="col-md-5 ">
+
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-md-1"></div>
+      <div class="col-md-5">
+        <div>
+          <div class="card-block">
+            <h6 class="header" style="font-weight: bold;">Mission Statement</h6>
+            <P style="font-style: oblique;font-family: auto;">Record and preserve the pedigrees of the world’s premier
+              bucking horse livestock while maintaining the integrity and enhancing the value of the breed.</P>
+            <P style="font-style: oblique;font-family: auto;">Provide beneficial services for ABHR members that enhance
+              and encourage “best practices” in bucking horse ownership, breeding, training and welfare.</P>
+            <P style="font-style: oblique;font-family: auto;">Generate interest and growth in ABHR through registered
+              horse ownership, membership, education, sponsorship and involvement through marketing,
+              promotion, advertising and publicity of the bucking horse breed and ABHR benefits and services.</P>
+            <P style="font-style: oblique;font-family: auto;">Develop diverse and comprehensive programs that will
+              educate and familiarize owners, members and the general public in the unique heritage and qualities
+              of bucking horse livestock.</P>
+            <h6 href="#" class="btn abhiRegi">ABHR REGISTRATION</h6>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <img class="card-img-bottom"
+          src=" https://lirp-cdn.multiscreensite.com/df1b0f02/dms3rep/multi/opt/ABHR_Logo+%28002%29-640w.png" alt=""
+          title="" style="height: 313px;">
+      </div>
+
+    </div>
+  </div>
+</section>
+<!-- ABHR MEMBNERSHIP end -->
+<hr>
+<!-- downloadForms -->
+
+<div class="row">
+  <div class="col-md-2"></div>
+  <div class="col-md-10">
+    <h4 class="membershipopti" style="font-weight: 100;font-family: auto;">DOWNLOAD FORMS</h4>
+    <br>
+    <p class="memberscroll">If you have any questions on forms how to fill them out. please contact the office <span
+        style="color: red;">+1(719)242-2747 </span> </p>
+
+    <br>
+    <div class="img-overlay">
+      <button class="btn btn-md abbiforms">ABBI FORMS </button>
+    </div>
+  </div>
+</div>
+<!-- downloadForms end-->
+<hr>
+
+
+<!-- downloadForms -->
+
+<div class="row">
+  <div class="col-md-2"></div>
+  <div class="col-md-10">
+    <h4 class="membershipopti" style="font-weight: 100;font-family: auto;">ABBI PROGRAMS</h4>
+    <br>
+    <p class="memberscroll">Take a look at the differnt programs we offer including our Super Stakes Incentive Program. Breeder's Certifiacte Program and Junior Membership</p>
+
+    <br>
+    <div class="img-overlay">
+      <button class="btn btn-md abbiforms">ABBI PROGRAMS</button>
+    </div>
+  </div>
+</div>
+<!-- downloadForms end-->
+<hr>
+<!-- video -->
+<div class="container">
+  <div class="row">
+    <div class="col-md-3" style="margin-right: 71px;"></div>
+    <div class="col-md-6" style="text-align: center;font-family: auto;">
+      <h4>VIDEO:</h4>
+      <h4>How to Properly Pull Tail Hair</h4>
+      <div class="embed-responsive embed-responsive-16by9">
+        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/GHaWD0Q8DLc" allowfullscreen></iframe>
+      </div>
+    </div>
+    <div class="col-md-3"></div>
+  </div>
+</div>
+<!-- video end -->
+<br>
+<!-- ======= Footer ======= -->
+<footer id="footer">
+
+  <div class="footer-top">
+    <div class="container">
+      <div class="row">
+
+        <div class="col-lg-3 col-md-6 footer-contact">
+          <h4>CONTACT INFO</h4>
+          <p>
+            <strong class="landmark">101 W. Riverwalk<br></strong>
+            <strong class="landmark">Pueblo, Colorado 81003<br></strong>
+            <strong>Phone : <span class="landmark">(719) 242-2747</span><br></strong>
+            <strong>FAX : (719) 242-2746<br></strong>
+            <strong>Email: <span class="landmark">info@americanbuckingbull.com</span></strong>
+          </p>
+        </div>
+
+        <div class="col-lg-2 col-md-6 footer-links">
+          <h4>OUR COMPANY</h4>
+
+          <ul>
+            <li><a href="#"><strong class="landmark">About ABBI</strong></a></li>
+            <li><a href="#"><strong class="landmark">Press Room</strong></a></li>
+            <li><a href="#"><strong class="landmark">Contact Us</strong></a></li>
+            <li><a href="#"><strong class="landmark">Privacy Policy</strong></a></li>
+            <li><a href="#"><strong class="landmark">2020 Rule Book</strong></a></li>
+          </ul>
+
+        </div>
+
+        <div class="col-lg-4 col-md-6 footer-newsletter">
+          <h4>MEMBERS AREA</h4>
+          <p><strong>Login to the Members Area to see your animal inventory, manage your profile and make
+              payments.</strong></p>
+          <ul>
+            <li><a href="#"><strong class="landmark">Login Now</strong></a></li>
+            <li><a href="#"><strong class="landmark">Join ABBI</strong></a></li>
+          </ul>
+        </div>
+
+      </div>
+    </div>
+  </div>
+
+  <div class="container d-md-flex py-4">
+
+    <div class="mr-md-auto text-center text-md-left">
+      <div class="copyright">
+        &copy; Copyright <strong><span> IntegrityTek 2018</span></strong>. All Rights Reserved
+      </div>
+      <div class="credits">
+        <!-- All the links in the footer should remain intact. -->
+        <!-- You can delete the links only if you purchased the pro version. -->
+        <!-- Licensing information: https://bootstrapmade.com/license/ -->
+        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/company-free-html-bootstrap-template/ -->
+        Designed by <a href="https://integrity-tek.com/" target="_blank"><span
+            style="color: orange">IntegrityTek</span></a>
+      </div>
+    </div>
+  </div>
+</footer><!-- End Footer -->
