nota member join now component

--- a/src/app/registration/registration.component.html
+++ b/src/app/registration/registration.component.html
@@ -9,8 +9,8 @@
     src="https://irp-cdn.multiscreensite.com/df1b0f02/dms3rep/multi/mobile/93691521_2857796014257094_5746070594508554240_o-fbc7e27e.jpg">
   <div class="img-overlay">
     <h2 class="headingName">Registration</h2>
-    <button class="btn btn-md firstbutton">Member Login</button>
-    <br> <button class="btn btn-md secondbutton">Not a Member?Join Now! </button>
+    <h6 class="btn btn-md firstbutton">Member Login</h6>
+    <br> <h6 class="btn btn-md secondbutton" routerLink="/notamember">Not a Member?Join Now! </h6>
   </div>
 </div>
 <!-- image end-->
